# art-root-io

./: CMakeLists.txt  CMakePresets.json
art_root_io/: CMakeLists.txt  DummyProductCache.cc  DummyProductCache.h  DuplicateChecker.cc  DuplicateChecker.h  FastCloningEnabled.cc  FastCloningEnabled.h  FastCloningInfoProvider.cc  FastCloningInfoProvider.h  GetFileFormatVersion.cc  Inputfwd.h  RootBranchInfo.cc  RootBranchInfo.h  RootBranchInfoList.cc  RootBranchInfoList.h  RootDelayedReader.cc  RootDelayedReader.h  RootFileBlock.h  RootHandlers.cc  RootHandlers.h  RootIOPolicy.cc  RootIOPolicy.h  RootInput.cc  RootInput.h  RootInputFile.cc  RootInputFile.h  RootInputFileSequence.cc  RootInputFileSequence.h  RootInput_source.cc  RootOutputFile.cc  RootOutputFile.h  RootOutputTree.cc  RootOutputTree.h  RootOutput_module.cc  RootSizeOnDisk.cc  RootSizeOnDisk.h  SamplingInput_source.cc  TFileDirectory.cc  TFileDirectory.h  TFileService.cc  (+11 more)
art_root_io/RootDB/: CMakeLists.txt  SQLErrMsg.cc  SQLite3Wrapper.cc  SQLite3Wrapper.h  TKeyVFSOpenPolicy.h  have_table.cc  have_table.h  tkeyvfs.cc  tkeyvfs.h
art_root_io/Services/: CMakeLists.txt  TFileDirectory.cc  TFileDirectory.h  TFileService.h  TFileService_service.cc
art_root_io/Services/detail/: RootDirectorySentry.cc  RootDirectorySentry.h
art_root_io/detail/: DataSetBroker.cc  DataSetBroker.h  DataSetSampler.cc  DataSetSampler.h  InfoDumperInputFile.cc  InfoDumperInputFile.h  KeptProvenance.h  RangeSetInfo.cc  RangeSetInfo.h  RootErrorClassifier.cc  RootErrorClassifier.h  RootErrorParser.h  SamplingDelayedReader.cc  SamplingDelayedReader.h  SamplingInputFile.cc  SamplingInputFile.h  dropBranch.cc  dropBranch.h  event_start.cc  getEntry.cc  rangeSetFromFileIndex.cc  rangeSetFromFileIndex.h  readFileIndex.h  readMetadata.h  resolveRangeSet.h  rootFileSizeTools.cc  rootFileSizeTools.h  rootOutputConfigurationTools.cc  rootOutputConfigurationTools.h
art_root_io/test/: BitsetAnalyzer_module.cc  BitsetProducer_module.cc  CMakeLists.txt  CheckFileName_disabled_t2  IntArrayAnalyzer_module.cc  IntArrayProducer_module.cc  MixFilterTestNoStartEvent_module.cc  RootErrorClassifier_t.cc  RootErrorHandler_t.cc  RootErrorParser_t.cc  RootOutputClosingCriteria_t.cc  SAM_metadata_verify_JSON-ref.txt  SAM_metadata_verify_hr-ref.txt  SeekToEventClient_service.cc  TFileService_r_08.cxx  TH1DataProducer_module.cc  TestTFileServiceNoRegister_module.cc  TestTFileService_module.cc  TestTFileService_r.cxx  XRootDRetry_module.cc  classes.h  classes_def.xml  test_GetFileFormatVersion.cpp
art_root_io/test/AssnsReaderTest/: CMakeLists.txt
art_root_io/test/RootDB/: CMakeLists.txt  myvfs.c  test2.cc  test3.cc  tkeyvfs_noroot.cc
art_root_io/test/Services/: CMakeLists.txt  TestTFileServiceNoRegister_module.cc  TestTFileService_module.cc
art_root_io/test/bad-assns/: BadAssnsProducer_module.cc  CMakeLists.txt  DummyA.h
art_root_io/test/event-shape/: ESSecondaryProducer_module.cc  classes.h
art_root_io/test/fastclonefail/v10/: CMakeLists.txt  ClonedProd.h  ClonedProdProducer_module.cc  classes.h  classes_def.xml  test_fastclone_fail_v10.fcl  test_fastclonefail_w.sh
art_root_io/test/fastclonefail/v11/: CMakeLists.txt  ClonedProd.h  ClonedProdAnalyzer_module.cc  classes.h  classes_def.xml  test_fastclone_fail_v11.fcl  test_fastclonefail_r.sh
art_root_io/test/high-memory/: CMakeLists.txt  HMRunProdProducer_module.cc  HMSubRunProdProducer_module.cc  classes.h
art_root_io/test/output-file-handling/: CMakeLists.txt
art_root_io/test/producing-services/: CMakeLists.txt
art_root_io/test/product-aggregation/physics-workflow/: AssembleMoreProductsRobust_module.cc  AssembleMoreProducts_module.cc  CMakeLists.txt  CheckMoreProducts_module.cc  CheckProducts_module.cc  ParticleSimulator_module.cc  Reconstruction_module.cc  classes.h
art_root_io/test/product-aggregation/physics-workflow/fcl/: eventGeneration_w.fcl
cmakeConfig/: CMakeLists.txt  art_root_io-fragment.cmake.in
config/: art_root_io-augment-ART_ROOT_IO.cmake
docs/: CMakeLists.txt  conf.py.in  depends.rst  helpers.py  index.rst  release-notes  releaseNotes.rst  series_temp.rst  suite_temp.rst  temp.rst
docs/_extensions/: redmineRoles.py
docs/helper_programs/: Product_sizes_dumper.rst
docs/io_handling/: Facilitating_schema_evolution_for_data_products.rst  Specifying_ROOT_compression_for_data_products.rst  data_product_dict_howto.rst  output_file_handling.rst  output_file_renaming.rst
docs/series_notes/: breaking_changes.rst  new_features.rst
tools/migration/: CMakeLists.txt  art-3.02-migration  art-3.02-migration.pl
ups/: product_deps  setup_for_development
